...
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IMn-e4-amK">
                                <rect key="frame" x="116" y="318" width="143" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="143" id="WLp-Fu-aJM"/>
                                </constraints>
                                <state key="normal" title="Pick Photos"/>
                                <connections>
                                    <action selector="didTapPickPhotos:" destination="whP-gf-Uak" eventType="touchUpInside" id="fgO-yo-5UB"/>
                                </connections>
                            </button>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hdc-AG-Q4a">
                                <rect key="frame" x="124" y="356" width="127" height="29"/>
                                <segments>
                                    <segment title="Single"/>
                                    <segment title="Multiple"/>
                                </segments>
                            </segmentedControl>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="IMn-e4-amK" firstAttribute="centerX" secondItem="hdc-AG-Q4a" secondAttribute="centerX" id="4h3-0y-vyM"/>
...
