...
@implementation DLFPhotosSelectionView

- (instancetype)initWithFrame:(CGRect)frame {
    self = [super initWithFrame:frame];
    if (self) {
        self.clearSelectionButton = [UIButton buttonWithType:UIButtonTypeRoundedRect];
        [self.clearSelectionButton setTitle:NSLocalizedString(@"Clear", nil) forState:UIControlStateNormal];
        [self.clearSelectionButton.titleLabel setFont:[UIFont systemFontOfSize:14]];
        [self.clearSelectionButton setTitleColor:[UIColor redColor] forState:UIControlStateNormal];
        [self.clearSelectionButton setBackgroundColor:[UIColor clearColor]];
        [self.clearSelectionButton sizeToFit];
        [self addSubview:self.clearSelectionButton];
        self.clearSelectionButton.center = CGPointMake(CGRectGetWidth(self.frame)/2, CGRectGetHeight(self.frame)/2);
...
