...
    [_panGesture setDelegate:self];
    [_panGesture requireGestureRecognizerToFail:_tapGesture];
    [self.collectionView addGestureRecognizer:_panGesture];
    
    [self.navigationController.interactivePopGestureRecognizer requireGestureRecognizerToFail:_panGesture];
    
    UIBarButtonItem *nextButton = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Next", nil) style:UIBarButtonItemStyleDone target:self action:@selector(didTapNextButton:)];
    [self.navigationItem setRightBarButtonItem:nextButton];
    [nextButton setEnabled:NO];
    self.nextButton = nextButton;
}

- (void)viewWillAppear:(BOOL)animated
...
